--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "test:watch": "mocha -r ts-node/register --watch src/**/*.spec.ts",
     "build": "tsc",
     "prepare": "tsc",
     "prepublishOnly": "npm run test"
@@ -16,12 +17,15 @@
   "author": "joeflateau",
   "license": "ISC",
   "dependencies": {
-    "fs-extra": "^8.1.0"
+    "@octokit/rest": "^17.1.2",
+    "fs-extra": "^8.1.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/chai": "^4.2.9",
-    "@types/node": "^13.7.7",
     "@types/mocha": "^7.0.1",
+    "@types/node": "^13.7.7",
+    "@types/xml2js": "^0.4.5",
     "chai": "^4.2.0",
     "mocha": "^7.1.0",
     "ts-node": "^8.6.2",
